src/main/java/org/cardygan/ilp/internal/persist/antlr/IlpParser.java
// Generated from Ilp.g4 by ANTLR 4.7.2
package org.cardygan.ilp.internal.persist.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class IlpParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, COMMA=28, LEFT_CURLY=29, RIGHT_CURLY=30, 
		LEFT_BRACKET=31, RIGHT_BRACKET=32, INF=33, ID=34, STRING=35, NUMBER=36, 
		INTEGER=37, WS=38, COMMENT=39, LINE_COMMENT=40;
	public static final int
		RULE_model = 0, RULE_vars = 1, RULE_varDecl = 2, RULE_intervalInt = 3, 
		RULE_intervalReal = 4, RULE_lbInt = 5, RULE_ubInt = 6, RULE_integer = 7, 
		RULE_inf = 8, RULE_lbReal = 9, RULE_ubReal = 10, RULE_varName = 11, RULE_obj = 12, 
		RULE_genCstrs = 13, RULE_cstrs = 14, RULE_cstrName = 15, RULE_sos1Cstrs = 16, 
		RULE_sos1 = 17, RULE_sos1Element = 18, RULE_var = 19, RULE_weight = 20, 
		RULE_boolExpr = 21, RULE_relOp = 22, RULE_arithExpr = 23, RULE_realLiteral = 24, 
		RULE_intLiteral = 25;
	private static String[] makeRuleNames() {
		return new String[] {
			"model", "vars", "varDecl", "intervalInt", "intervalReal", "lbInt", "ubInt", 
			"integer", "inf", "lbReal", "ubReal", "varName", "obj", "genCstrs", "cstrs", 
			"cstrName", "sos1Cstrs", "sos1", "sos1Element", "var", "weight", "boolExpr", 
			"relOp", "arithExpr", "realLiteral", "intLiteral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'vars'", "'obj'", "'genCstrs'", "'cstrs'", "'sos1'", "':Int'", 
			"':Real'", "':Bin'", "'min'", "'max'", "':'", "';'", "'('", "')'", "'&&'", 
			"'||'", "'xor'", "'XOR'", "'Xor'", "'<=>'", "'=>'", "'!'", "'>='", "'<='", 
			"'='", "'+'", "'-'", "','", "'{'", "'}'", "'['", "']'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "COMMA", "LEFT_CURLY", "RIGHT_CURLY", "LEFT_BRACKET", 
			"RIGHT_BRACKET", "INF", "ID", "STRING", "NUMBER", "INTEGER", "WS", "COMMENT", 
			"LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Ilp.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public IlpParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ModelContext extends ParserRuleContext {
		public List<TerminalNode> LEFT_CURLY() { return getTokens(IlpParser.LEFT_CURLY); }
		public TerminalNode LEFT_CURLY(int i) {
			return getToken(IlpParser.LEFT_CURLY, i);
		}
		public VarsContext vars() {
			return getRuleContext(VarsContext.class,0);
		}
		public List<TerminalNode> RIGHT_CURLY() { return getTokens(IlpParser.RIGHT_CURLY); }
		public TerminalNode RIGHT_CURLY(int i) {
			return getToken(IlpParser.RIGHT_CURLY, i);
		}
		public ObjContext obj() {
			return getRuleContext(ObjContext.class,0);
		}
		public GenCstrsContext genCstrs() {
			return getRuleContext(GenCstrsContext.class,0);
		}
		public CstrsContext cstrs() {
			return getRuleContext(CstrsContext.class,0);
		}
		public Sos1CstrsContext sos1Cstrs() {
			return getRuleContext(Sos1CstrsContext.class,0);
		}
		public ModelContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_model; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterModel(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitModel(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitModel(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModelContext model() throws RecognitionException {
		ModelContext _localctx = new ModelContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_model);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(52);
			match(T__0);
			setState(53);
			match(LEFT_CURLY);
			setState(54);
			vars();
			setState(55);
			match(RIGHT_CURLY);
			}
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(57);
				match(T__1);
				setState(58);
				match(LEFT_CURLY);
				setState(59);
				obj();
				setState(60);
				match(RIGHT_CURLY);
				}
			}

			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__2) {
				{
				setState(64);
				match(T__2);
				setState(65);
				match(LEFT_CURLY);
				setState(66);
				genCstrs();
				setState(67);
				match(RIGHT_CURLY);
				}
			}

			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(71);
				match(T__3);
				setState(72);
				match(LEFT_CURLY);
				setState(73);
				cstrs();
				setState(74);
				match(RIGHT_CURLY);
				}
			}

			setState(83);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__4) {
				{
				setState(78);
				match(T__4);
				setState(79);
				match(LEFT_CURLY);
				setState(80);
				sos1Cstrs();
				setState(81);
				match(RIGHT_CURLY);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarsContext extends ParserRuleContext {
		public List<VarDeclContext> varDecl() {
			return getRuleContexts(VarDeclContext.class);
		}
		public VarDeclContext varDecl(int i) {
			return getRuleContext(VarDeclContext.class,i);
		}
		public VarsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vars; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterVars(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitVars(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitVars(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarsContext vars() throws RecognitionException {
		VarsContext _localctx = new VarsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_vars);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(85);
				varDecl();
				}
				}
				setState(90);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarDeclContext extends ParserRuleContext {
		public VarDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varDecl; }
	 
		public VarDeclContext() { }
		public void copyFrom(VarDeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RealVarContext extends VarDeclContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public IntervalRealContext intervalReal() {
			return getRuleContext(IntervalRealContext.class,0);
		}
		public RealVarContext(VarDeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterRealVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitRealVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitRealVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class BinVarContext extends VarDeclContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public BinVarContext(VarDeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterBinVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitBinVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitBinVar(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IntVarContext extends VarDeclContext {
		public VarNameContext varName() {
			return getRuleContext(VarNameContext.class,0);
		}
		public IntervalIntContext intervalInt() {
			return getRuleContext(IntervalIntContext.class,0);
		}
		public IntVarContext(VarDeclContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterIntVar(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitIntVar(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitIntVar(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarDeclContext varDecl() throws RecognitionException {
		VarDeclContext _localctx = new VarDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_varDecl);
		int _la;
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				_localctx = new IntVarContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				varName();
				setState(92);
				match(T__5);
				setState(94);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFT_BRACKET) {
					{
					setState(93);
					intervalInt();
					}
				}

				}
				break;
			case 2:
				_localctx = new RealVarContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(96);
				varName();
				setState(97);
				match(T__6);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LEFT_BRACKET) {
					{
					setState(98);
					intervalReal();
					}
				}

				}
				break;
			case 3:
				_localctx = new BinVarContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(101);
				varName();
				setState(102);
				match(T__7);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalIntContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(IlpParser.LEFT_BRACKET, 0); }
		public LbIntContext lbInt() {
			return getRuleContext(LbIntContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(IlpParser.COMMA, 0); }
		public UbIntContext ubInt() {
			return getRuleContext(UbIntContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(IlpParser.RIGHT_BRACKET, 0); }
		public IntervalIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intervalInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterIntervalInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitIntervalInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitIntervalInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntervalIntContext intervalInt() throws RecognitionException {
		IntervalIntContext _localctx = new IntervalIntContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_intervalInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(LEFT_BRACKET);
			setState(107);
			lbInt();
			setState(108);
			match(COMMA);
			setState(109);
			ubInt();
			setState(110);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntervalRealContext extends ParserRuleContext {
		public TerminalNode LEFT_BRACKET() { return getToken(IlpParser.LEFT_BRACKET, 0); }
		public LbRealContext lbReal() {
			return getRuleContext(LbRealContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(IlpParser.COMMA, 0); }
		public UbRealContext ubReal() {
			return getRuleContext(UbRealContext.class,0);
		}
		public TerminalNode RIGHT_BRACKET() { return getToken(IlpParser.RIGHT_BRACKET, 0); }
		public IntervalRealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_intervalReal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterIntervalReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitIntervalReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitIntervalReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntervalRealContext intervalReal() throws RecognitionException {
		IntervalRealContext _localctx = new IntervalRealContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_intervalReal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(LEFT_BRACKET);
			setState(113);
			lbReal();
			setState(114);
			match(COMMA);
			setState(115);
			ubReal();
			setState(116);
			match(RIGHT_BRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LbIntContext extends ParserRuleContext {
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public LbIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lbInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterLbInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitLbInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitLbInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LbIntContext lbInt() throws RecognitionException {
		LbIntContext _localctx = new LbIntContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_lbInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			integer();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UbIntContext extends ParserRuleContext {
		public InfContext inf() {
			return getRuleContext(InfContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public UbIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ubInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterUbInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitUbInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitUbInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UbIntContext ubInt() throws RecognitionException {
		UbIntContext _localctx = new UbIntContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_ubInt);
		try {
			setState(122);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INF:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				inf();
				}
				break;
			case INTEGER:
				enterOuterAlt(_localctx, 2);
				{
				setState(121);
				integer();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IntegerContext extends ParserRuleContext {
		public TerminalNode INTEGER() { return getToken(IlpParser.INTEGER, 0); }
		public IntegerContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_integer; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterInteger(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitInteger(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitInteger(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IntegerContext integer() throws RecognitionException {
		IntegerContext _localctx = new IntegerContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_integer);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			match(INTEGER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InfContext extends ParserRuleContext {
		public TerminalNode INF() { return getToken(IlpParser.INF, 0); }
		public InfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inf; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterInf(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitInf(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitInf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfContext inf() throws RecognitionException {
		InfContext _localctx = new InfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_inf);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(INF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LbRealContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(IlpParser.NUMBER, 0); }
		public LbRealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lbReal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterLbReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitLbReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitLbReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LbRealContext lbReal() throws RecognitionException {
		LbRealContext _localctx = new LbRealContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_lbReal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			match(NUMBER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UbRealContext extends ParserRuleContext {
		public TerminalNode NUMBER() { return getToken(IlpParser.NUMBER, 0); }
		public TerminalNode INF() { return getToken(IlpParser.INF, 0); }
		public UbRealContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ubReal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterUbReal(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitUbReal(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitUbReal(this);
			else return visitor.visitChildren(this);
		}
	}

	public final UbRealContext ubReal() throws RecognitionException {
		UbRealContext _localctx = new UbRealContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ubReal);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			_la = _input.LA(1);
			if ( !(_la==INF || _la==NUMBER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VarNameContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(IlpParser.ID, 0); }
		public VarNameContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_varName; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterVarName(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitVarName(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitVarName(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VarNameContext varName() throws RecognitionException {
		VarNameContext _localctx = new VarNameContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_varName);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ObjContext extends ParserRuleContext {
		public ObjContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_obj; }
	 
		public ObjContext() { }
		public void copyFrom(ObjContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MaxObjContext extends ObjContext {
		public ArithExprContext arithExpr() {
			return getRuleContext(ArithExprContext.class,0);
		}
		public MaxObjContext(ObjContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterMaxObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitMaxObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitMaxObj(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class MinObjContext extends ObjContext {
		public ArithExprContext arithExpr() {
			return getRuleContext(ArithExprContext.class,0);
		}
		public MinObjContext(ObjContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).enterMinObj(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof IlpListener ) ((IlpListener)listener).exitMinObj(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof IlpVisitor ) return ((IlpVisitor<? extends T>)visitor).visitMinObj(this);
			else return visitor.visitChildren(this);
		}
	}
